fix: update settings & route for SAML (#1009)
## What kind of change does this PR introduce?
* Moves the `SAML_ENABLED` check to a middleware function 
* Display information about whether SAML is enabled in the `/settings`
endpoint
